--- a/index.html
+++ b/index.html
@@ -4,38 +4,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Four card feature section</title>
 
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+  <div class="container">
+    <div class="text">
+      <h1>  Reliable, efficient delivery </h1>
+      <h2>  Powered by Technology </h2>
+      <p>   Our Artificial Intelligence powered tools use millions of project data points 
+        to ensure that your project is successful </p>
+    </div>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+    <div class="boxes">
+      <div class="box">
+        <h1>Supervisor</h1>
+        <p>  Monitors activity to identify project roadblocks</p>
+        <img src="./images/icon-supervisor.svg" alt="">
+      </div>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+      <div class="mid-box">
+        <div class="box">
+          <h1>  Team Builder</h1>
+          <p> Scans our talent network to create the optimal team for your project</p>
+          <img src="./images/icon-team-builder.svg" alt="">
+        </div>
+        <div class="box">
+          <h1>  Karma</h1>
+          <p>  Regularly evaluates our talent to ensure quality</p>
+          <img src="./images/icon-karma.svg" alt="">
+        </div>
+      </div>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+      <div class="box">
+        <h1>  Calculator</h1>
+        <p>  Uses data from past projects to provide better delivery estimates</p>
+        <img src="./images/icon-calculator.svg" alt="">
+      </div>
+    </div>
+    <footer>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Your Name Here</a>.
+      </p>
+    </footer>
+  </div>  
 </body>
 </html>
