Finalizando versão Desktop

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/estilo.css">
   <title>Frontend Mentor | Four card feature section</title>
 
 </head>
@@ -18,26 +21,26 @@
     </div>
 
     <div class="boxes">
-      <div class="box">
+      <div class="box cyan">
         <h1>Supervisor</h1>
         <p>  Monitors activity to identify project roadblocks</p>
         <img src="./images/icon-supervisor.svg" alt="">
       </div>
 
       <div class="mid-box">
-        <div class="box">
+        <div class="box red">
           <h1>  Team Builder</h1>
           <p> Scans our talent network to create the optimal team for your project</p>
           <img src="./images/icon-team-builder.svg" alt="">
         </div>
-        <div class="box">
+        <div class="box orange">
           <h1>  Karma</h1>
           <p>  Regularly evaluates our talent to ensure quality</p>
           <img src="./images/icon-karma.svg" alt="">
         </div>
       </div>
 
-      <div class="box">
+      <div class="box blue">
         <h1>  Calculator</h1>
         <p>  Uses data from past projects to provide better delivery estimates</p>
         <img src="./images/icon-calculator.svg" alt="">
@@ -46,7 +49,7 @@
     <footer>
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="#">Kelson Douglas</a>.
       </p>
     </footer>
   </div>  
